Progress bar alignment fix

--- a/VSPOMs/static/assets/styles.css
+++ b/VSPOMs/static/assets/styles.css
@@ -272,7 +272,7 @@ section.panel#graphs-panel {
     width: 100%;
     top: 50;
     left: 50;
-    transform: translate(-3%, -50%);
+    transform: translate(-20px, -50%);
 }
 /* Simulation progress bar */
 #progress-bar {
